_generated-doc/2.2/config/quarkus-vertx-http-config-group-server-ssl-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-server-ssl-config_configuration]]link:#quarkus-vertx-http-config-group-server-ssl-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.files[quarkus.http.ssl.certificate.files]`

[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files require SNI to be enabled.
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-files[quarkus.http.ssl.certificate.key-files]`

[.description]
--
The list of path to server certificates private key file using the PEM format. Specifying multiple files require SNI to be enabled. The order of the key files must match the order of the certificates.
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-file[quarkus.http.ssl.certificate.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-file-type[quarkus.http.ssl.certificate.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-provider[quarkus.http.ssl.certificate.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-password[quarkus.http.ssl.certificate.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-key-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-key-alias[quarkus.http.ssl.certificate.key-store-key-alias]`

[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-key-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.key-store-key-password[quarkus.http.ssl.certificate.key-store-key-password]`

[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust.
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-cert-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.certificate.trust-store-cert-alias[quarkus.http.ssl.certificate.trust-store-cert-alias]`

[.description]
--
An optional parameter to trust only one specific certificate in the trust store (instead of trusting all certificates in the store).
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.cipher-suites]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.cipher-suites[quarkus.http.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.
--|list of string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.protocols]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.protocols[quarkus.http.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.sni]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus.http.ssl.sni[quarkus.http.ssl.sni]`

[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.
--|boolean 
|`false`

|===